Web Inspector: RTL: "Elements > Styles - Rules" rule and media query headers should be left aligned https://bugs.webkit.org/show_bug.cgi?id=171954 <rdar://problem/31961976>
Reviewed by Matt Baker.

* UserInterface/Views/CSSStyleDeclarationSection.css:
(.style-declaration-section > .header):
(.style-declaration-section.locked > .header > .locked-icon):
(.style-declaration-section > .header > .icon):
(.style-declaration-section > .header > textarea):
(.style-declaration-section.invalid-selector > .header > .icon):
(body[dir=ltr] .style-declaration-section > .header): Deleted.
(body[dir=rtl] .style-declaration-section > .header): Deleted.
(body[dir=ltr] .style-declaration-section.locked > .header > .locked-icon): Deleted.
(body[dir=rtl] .style-declaration-section.locked > .header > .locked-icon): Deleted.
(body[dir=ltr] .style-declaration-section > .header > .icon): Deleted.
(body[dir=rtl] .style-declaration-section > .header > .icon): Deleted.
(body[dir=ltr] .style-declaration-section > .header > textarea): Deleted.
(body[dir=rtl] .style-declaration-section > .header > textarea): Deleted.
Remove RTL rules.

* UserInterface/Views/CSSStyleDeclarationSection.js:
(WebInspector.CSSStyleDeclarationSection):
Set dir="ltr" so selector's textareas work correctly.

* UserInterface/Views/RulesStyleDetailsPanel.css:
(.sidebar > .panel.details.css-style .rules):


Canonical link: https://commits.webkit.org/188912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216692 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/CSSStyleDeclarationSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CSSStyleDeclarationSection.css
@@ -62,47 +62,27 @@
     --style-declaration-section-header-padding-end: 5px;
 }
 
-body[dir=ltr] .style-declaration-section > .header {
+.style-declaration-section > .header {
     padding: 4px var(--style-declaration-section-header-padding-end) 3px var(--style-declaration-section-header-padding-start);
-}
-
-body[dir=rtl] .style-declaration-section > .header {
-    padding: 4px var(--style-declaration-section-header-padding-start) 3px var(--style-declaration-section-header-padding-end);
 }
 
 .style-declaration-section.locked > .header > .locked-icon {
     width: 8px;
     height: 10px;
     content: url(../Images/Locked.svg);
-
-    --style-declaration-section-locked-header-locked-icon-margin-start: 5px;
 }
 
-body[dir=ltr] .style-declaration-section.locked > .header > .locked-icon {
+.style-declaration-section.locked > .header > .locked-icon {
     float: right;
-    margin-left: var(--style-declaration-section-locked-header-locked-icon-margin-start);
-}
-
-body[dir=rtl] .style-declaration-section.locked > .header > .locked-icon {
-    float: left;
-    margin-right: var(--style-declaration-section-locked-header-locked-icon-margin-start);
+    margin-left: 5px;
 }
 
 .style-declaration-section > .header > .icon {
     position: absolute;
     top: 2px;
+    left: 4px;
     width: 16px;
     height: 16px;
-
-    --style-declaration-section-header-icon-offset-start: 4px;
-}
-
-body[dir=ltr] .style-declaration-section > .header > .icon {
-    left: var(--style-declaration-section-header-icon-offset-start);
-}
-
-body[dir=rtl] .style-declaration-section > .header > .icon {
-    right: var(--style-declaration-section-header-icon-offset-start);
 }
 
 .style-declaration-section > .header > .icon.toggle-able:hover {
@@ -138,12 +118,8 @@ body[dir=rtl] .style-declaration-section > .header > .icon {
     --style-declaration-section-header-textarea-margin-end: var(--style-declaration-section-header-padding-end);
 }
 
-body[dir=ltr] .style-declaration-section > .header > textarea {
+.style-declaration-section > .header > textarea {
     margin: 4px var(--style-declaration-section-header-textarea-margin-end) 3px var(--style-declaration-section-header-textarea-margin-start);
-}
-
-body[dir=rtl] .style-declaration-section > .header > textarea {
-    margin: 4px var(--style-declaration-section-header-textarea-margin-start) 3px var(--style-declaration-section-header-textarea-margin-end);
 }
 
 .style-declaration-section > .header > textarea:focus {
@@ -190,11 +166,10 @@ body[dir=rtl] .style-declaration-section > .header > textarea {
 
 .style-declaration-section.invalid-selector > .header > .icon {
     top: 4px;
+    left: 6px;
     width: 12px;
     height: 12px;
     content: url(../Images/Error.svg);
-
-    --style-declaration-section-header-icon-offset-start: 6px;
 }
 
 .style-declaration-section.invalid-selector > .header > .selector,
