--- a/Source/WebInspectorUI/UserInterface/Views/RulesStyleDetailsPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/RulesStyleDetailsPanel.css
@@ -23,6 +23,10 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+.sidebar > .panel.details.css-style .rules {
+    text-align: left;
+}
+
 .sidebar > .panel.details.css-style .rules .label {
     color: hsl(0, 0%, 60%);
     text-shadow: white 0 1px 0;
